--- a/eTools Ultimate/Views/Pages/Home/DashboardPage.xaml
+++ b/eTools Ultimate/Views/Pages/Home/DashboardPage.xaml
@@ -4,10 +4,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Pages"
+    xmlns:pageViewModels="clr-namespace:eTools_Ultimate.ViewModels.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
     Title="DashboardPage"
-    d:DataContext="{d:DesignInstance local:DashboardPage,
+    d:DataContext="{d:DesignInstance pageViewModels:DashboardViewModel,
                                      IsDesignTimeCreatable=False}"
     d:DesignHeight="754"
     d:DesignWidth="800"
@@ -29,8 +31,12 @@
                 Width="230"
                 Height="120"
                 Cursor="Hand"
-                Tag="{Binding}"
-                MouseLeftButtonDown="Card_MouseLeftButtonDown">
+                Tag="{Binding}">
+                <behaviors:Interaction.Triggers>
+                    <behaviors:EventTrigger EventName="MouseLeftButtonUp">
+                        <behaviors:InvokeCommandAction Command="{Binding DataContext.OpenCardPageCommand, RelativeSource={RelativeSource AncestorType=Page}}" CommandParameter="{Binding}" />
+                    </behaviors:EventTrigger>
+                </behaviors:Interaction.Triggers>
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
@@ -156,7 +162,7 @@
                                 Foreground="#FFFFFF"
                                 Content="Patchlogs"
                                 Icon="History24"
-                                Click="OpenChangelogDialog" />
+                                Command="{Binding OpenPatchNotesDialogCommand}" />
                         </Grid>
                     </Grid>
                 </Border>
@@ -190,8 +196,10 @@
                    VerticalAlignment="Bottom"
                    Cursor="Hand"
                    ToolTip="View on GitHub"
-                   MouseLeftButtonDown="OpenGithubLink"
                    RenderOptions.BitmapScalingMode="HighQuality">
+                <Image.InputBindings>
+                    <MouseBinding Gesture="LeftClick" Command="{Binding OpenGithubLinkCommand}" />
+                </Image.InputBindings>
                 <Image.Effect>
                     <DropShadowEffect ShadowDepth="1" Opacity="0.3" BlurRadius="4" Color="#000000"/>
                 </Image.Effect>
@@ -208,8 +216,10 @@
                    VerticalAlignment="Bottom"
                    Cursor="Hand"
                    ToolTip="Join our Discord server"
-                   MouseLeftButtonDown="OpenDiscordLink"
                    RenderOptions.BitmapScalingMode="HighQuality">
+                <Image.InputBindings>
+                    <MouseBinding Gesture="LeftClick" Command="{Binding OpenDiscordLinkCommand}" />
+                </Image.InputBindings>
                 <Image.Effect>
                     <DropShadowEffect ShadowDepth="1" Opacity="0.3" BlurRadius="4" Color="#000000"/>
                 </Image.Effect>
