--- a/eTools Ultimate/Views/Dialogs/MoverReferenceModelDialog.xaml
+++ b/eTools Ultimate/Views/Dialogs/MoverReferenceModelDialog.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="Select Reference Model"
-    Height="450"
+    Height="200"
     Width="600"
     IsPrimaryButtonEnabled="True"
     IsSecondaryButtonEnabled="True"
@@ -18,7 +18,7 @@
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <TextBlock
@@ -27,44 +27,31 @@
             FontSize="16"
             Text="Please select a reference model:" />
 
-        <ui:Card Grid.Row="1" Margin="0,0,0,10">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-
-                <ui:TextBox
-                    Grid.Row="0"
-                    Margin="0,0,0,10"
-                    PlaceholderText="Search models..."
-                    Icon="Search24" />
-
-                <ListView
-                    Grid.Row="1"
-                    x:Name="ModelsListView"
-                    Height="250"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <Grid Margin="0,5">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="*" />
-                                </Grid.ColumnDefinitions>
-                                <ui:SymbolIcon
-                                    Grid.Column="0"
-                                    Margin="0,0,10,0"
-                                    Symbol="Document24" />
-                                <StackPanel Grid.Column="1">
-                                    <TextBlock Text="{Binding Name}" FontWeight="SemiBold" />
-                                    <TextBlock Text="{Binding Description}" Opacity="0.7" TextWrapping="Wrap" />
-                                </StackPanel>
-                            </Grid>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </Grid>
+        <ui:Card Grid.Row="1" Margin="0">
+            <ComboBox
+                x:Name="ModelsComboBox"
+                Width="Auto"
+                Margin="10"
+                ItemsSource="{Binding Models}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <ui:SymbolIcon
+                                Grid.Column="0"
+                                Margin="0,0,10,0"
+                                Symbol="Document24" />
+                            <TextBlock 
+                                Grid.Column="1" 
+                                Text="{Binding Name}" 
+                                VerticalAlignment="Center"/>
+                        </Grid>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
         </ui:Card>
     </Grid>
 
